--- a/Menulis Javascript/index2.html
+++ b/Menulis Javascript/index2.html
@@ -4,11 +4,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Penulisan Javascript Eksternal</title>
 </head>
 
 <body>
+    <h1>hello Word!</h1>
 
+    <script src="script.js"></script>
 </body>
 
 </html>
