Latihan For dan While

--- a/Control Flow/Pengulangan (for, if, while)/Latihan/index.html
+++ b/Control Flow/Pengulangan (for, if, while)/Latihan/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Latihan cotnrol flow (Taxi)</title>
+    <title>Latihan Pengulangan (Taxi)</title>
 </head>
 
 <body>
