--- a/Control Flow/Pengulangan (for, if, while)/LATIHAN/Latihan 1/index.html
+++ b/Control Flow/Pengulangan (for, if, while)/LATIHAN/Latihan 1/index.html
@@ -4,11 +4,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Latihan Pengulangan (Taxi)</title>
+    <title>Latihan 1</title>
 </head>
 
 <body>
-    <h1>Hello Word!</h1>
+    <h1>Uji pengulangan analogi sebuah kendaraan Taxi</h1>
 
     <script src="taxi.js"></script>
 
